[gd_scene load_steps=7 format=3 uid="uid://dimystt8mjbe2"]

[ext_resource type="Script" path="res://Scripts/Enemies/Caterkiller.gd" id="1_8n1y4"]
[ext_resource type="Texture2D" uid="uid://brlottwk1td54" path="res://Graphics/Enemies/Caterkiller.png" id="2_p4fkr"]
[ext_resource type="PackedScene" uid="uid://canb4g0vsrw8t" path="res://Entities/Enemies/CaterkillerSegment.tscn" id="4_vay3o"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(17, 15)

[sub_resource type="Animation" id="Animation_of4dk"]
resource_name = "default"
length = 0.8
loop_mode = 1
step = 0.1333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:currentState")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13, 0.39, 0.53, 0.79),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 2, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1333, 0.5332),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1333, 0.3999, 0.5332),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, -7), Vector2(0, -7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sbcsn"]
_data = {
"default": SubResource("Animation_of4dk")
}

[node name="Caterkiller" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 16384
collision_mask = 0
script = ExtResource("1_8n1y4")

[node name="CollisionMask" type="CollisionShape2D" parent="."]
modulate = Color(1, 0, 1, 1)
position = Vector2(0.5, 2.5)
shape = SubResource("1")

[node name="ScatterRemover" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-8, -5, 17, 15)

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 528384

[node name="HitBox" type="CollisionShape2D" parent="DamageArea"]
modulate = Color(1, 0, 1, 1)
position = Vector2(0.5, 2.5)
shape = SubResource("1")

[node name="FloorCast" type="RayCast2D" parent="."]
position = Vector2(0, -26)
target_position = Vector2(0, 40)

[node name="Head" type="Sprite2D" parent="."]
texture = ExtResource("2_p4fkr")
hframes = 3

[node name="Segment3" parent="." node_paths=PackedStringArray("head") instance=ExtResource("4_vay3o")]
position = Vector2(36, 0)
head = NodePath("..")

[node name="Segment2" parent="." node_paths=PackedStringArray("head") instance=ExtResource("4_vay3o")]
position = Vector2(24, 0)
head = NodePath("..")

[node name="Segment1" parent="." node_paths=PackedStringArray("head") instance=ExtResource("4_vay3o")]
position = Vector2(12, 0)
head = NodePath("..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sbcsn")
}

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
rect = Rect2(-48, -24, 96, 48)

[connection signal="area_entered" from="DamageArea" to="." method="_on_DamageArea_area_entered"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_body_exited"]
